--- a/index.html
+++ b/index.html
@@ -7,9 +7,33 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  
+
+  <!-- Compiled and minified CSS -->
+  <link rel="stylesheet" href="animate.css" />
+
 </head>
-<body><br>
+<body>
+  <div class="t animated" style="visibility: hidden;">
+    <div class="full in animated fadeIn" id="loading" style="margin: 0; padding: 0; animation-duration: 0.5s !important;">
+      <div class="header-wrapper">
+        <div class="txt" style="animation-duration: 0.5s !important;">
+          <div class="preloader-wrapper big active center">
+            <div class="spinner-layer spinner-th">
+              <div class="circle-clipper left">
+                <div class="circle"></div>
+              </div>
+              <div class="gap-patch">
+                <div class="circle"></div>
+              </div>
+              <div class="circle-clipper right">
+                <div class="circle"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+<br>
 <center><h1><b>ENCODE & DECODE</b></h1>
  <h4>Current mode:</h4>
 <div id="encode">
