--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Encode & Decode</title>
   <link href="/css/style.css" rel="stylesheet"><meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -13,26 +13,6 @@
 
 </head>
 <body>
-  <div class="t animated" style="visibility: hidden;">
-    <div class="full in animated fadeIn" id="loading" style="margin: 0; padding: 0; animation-duration: 0.5s !important;">
-      <div class="header-wrapper">
-        <div class="txt" style="animation-duration: 0.5s !important;">
-          <div class="preloader-wrapper big active center">
-            <div class="spinner-layer spinner-th">
-              <div class="circle-clipper left">
-                <div class="circle"></div>
-              </div>
-              <div class="gap-patch">
-                <div class="circle"></div>
-              </div>
-              <div class="circle-clipper right">
-                <div class="circle"></div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
 <br>
 <center><h1><b>ENCODE & DECODE</b></h1>
  <h4>Current mode:</h4>
